projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/804819755326/us-west-1/InternetGateways.json
{
  "InternetGateways": [
    {
      "Attachments": [
        {
          "State": "available",
          "VpcId": "vpc-0ecbcbd110fd839d1"
        }
      ],
      "InternetGatewayId": "igw-04f7f80d9657a354d",
      "OwnerId": "804819755326",
      "Tags": []
    }
  ]
}
