projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/804819755326/us-west-1/NetworkInterfaces.json
{
  "NetworkInterfaces": [
    {
      "Attachment": {
        "AttachmentId": "ela-attach-d5a56ff5",
        "DeleteOnTermination": false,
        "DeviceIndex": 1,
        "InstanceOwnerId": "amazon-aws",
        "Status": "attached"
      },
      "AvailabilityZone": "us-west-1a",
      "Description": "Network Interface for Transit Gateway Attachment tgw-attach-075ea06a59d3212af",
      "Groups": [],
      "InterfaceType": "transit_gateway",
      "Ipv6Addresses": [],
      "MacAddress": "02:17:e2:9f:5c:b1",
      "NetworkInterfaceId": "eni-0c416b307da90592c",
      "OwnerId": "804819755326",
      "PrivateDnsName": "ip-192-168-1-26.us-west-1.compute.internal",
      "PrivateIpAddress": "192.168.1.26",
      "PrivateIpAddresses": [
        {
          "Primary": true,
          "PrivateDnsName": "ip-192-168-1-26.us-west-1.compute.internal",
          "PrivateIpAddress": "192.168.1.26"
        }
      ],
      "RequesterId": "688172078591",
      "RequesterManaged": false,
      "SourceDestCheck": false,
      "Status": "in-use",
      "SubnetId": "subnet-0080bd39fe3626e89",
      "TagSet": [],
      "VpcId": "vpc-0ecbcbd110fd839d1"
    },
    {
      "Association": {
        "IpOwnerId": "amazon",
        "PublicDnsName": "ec2-52-53-220-155.us-west-1.compute.amazonaws.com",
        "PublicIp": "52.53.220.155"
      },
      "Attachment": {
        "AttachTime": "2020-06-21 03:33:47+00:00",
        "AttachmentId": "eni-attach-01b03b6891300c8fe",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "InstanceId": "i-0afb0a59f6bf36397",
        "InstanceOwnerId": "804819755326",
        "Status": "attached"
      },
      "AvailabilityZone": "us-west-1a",
      "Description": "",
      "Groups": [
        {
          "GroupId": "sg-0365783e832fbf535",
          "GroupName": "terraform-20200621033345013700000001"
        }
      ],
      "InterfaceType": "interface",
      "Ipv6Addresses": [],
      "MacAddress": "02:46:ea:ec:6d:4d",
      "NetworkInterfaceId": "eni-0590296cf36ac8a7b",
      "OwnerId": "804819755326",
      "PrivateDnsName": "ip-192-168-1-100.us-west-1.compute.internal",
      "PrivateIpAddress": "192.168.1.100",
      "PrivateIpAddresses": [
        {
          "Association": {
            "IpOwnerId": "amazon",
            "PublicDnsName": "ec2-52-53-220-155.us-west-1.compute.amazonaws.com",
            "PublicIp": "52.53.220.155"
          },
          "Primary": true,
          "PrivateDnsName": "ip-192-168-1-100.us-west-1.compute.internal",
          "PrivateIpAddress": "192.168.1.100"
        }
      ],
      "RequesterManaged": false,
      "SourceDestCheck": true,
      "Status": "in-use",
      "SubnetId": "subnet-0080bd39fe3626e89",
      "TagSet": [],
      "VpcId": "vpc-0ecbcbd110fd839d1"
    }
  ]
}
