projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/804819755326/us-west-1/SecurityGroups.json
{
  "SecurityGroups": [
    {
      "Description": "Managed by Terraform",
      "GroupId": "sg-0365783e832fbf535",
      "GroupName": "terraform-20200621033345013700000001",
      "IpPermissions": [
        {
          "FromPort": 33434,
          "IpProtocol": "udp",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "Traceroute Access"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 33534,
          "UserIdGroupPairs": []
        },
        {
          "FromPort": 22,
          "IpProtocol": "tcp",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "SSH Access"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 22,
          "UserIdGroupPairs": []
        },
        {
          "FromPort": 8,
          "IpProtocol": "icmp",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "ICMP Access"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 0,
          "UserIdGroupPairs": []
        }
      ],
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0",
              "Description": "Allow all"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        }
      ],
      "OwnerId": "804819755326",
      "VpcId": "vpc-0ecbcbd110fd839d1"
    },
    {
      "Description": "default VPC security group",
      "GroupId": "sg-06c0578038b645c17",
      "GroupName": "default",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": [
            {
              "GroupId": "sg-06c0578038b645c17",
              "UserId": "804819755326"
            }
          ]
        }
      ],
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        }
      ],
      "OwnerId": "804819755326",
      "VpcId": "vpc-0ecbcbd110fd839d1"
    }
  ]
}
