projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/804819755326/us-west-1/TransitGatewayPropagations.json
{
  "TransitGatewayPropagations": [
    {
      "TransitGatewayRouteTableId": "tgw-rtb-00be87593fb2cd0ae",
      "TransitGatewayRouteTablePropagations": [
        {
          "ResourceId": "vpc-0ecbcbd110fd839d1",
          "ResourceType": "vpc",
          "State": "enabled",
          "TransitGatewayAttachmentId": "tgw-attach-075ea06a59d3212af"
        }
      ]
    }
  ]
}
