projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/804819755326/us-west-1/TransitGatewayRouteTables.json
{
  "TransitGatewayRouteTables": [
    {
      "CreationTime": "2020-06-21 03:34:19+00:00",
      "DefaultAssociationRouteTable": true,
      "DefaultPropagationRouteTable": true,
      "State": "available",
      "Tags": [],
      "TransitGatewayId": "tgw-03201f1960ddb0c25",
      "TransitGatewayRouteTableId": "tgw-rtb-00be87593fb2cd0ae"
    }
  ]
}
