projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/804819755326/us-west-1/TransitGatewayVpcAttachments.json
{
  "TransitGatewayVpcAttachments": [
    {
      "CreationTime": "2020-06-21 03:35:09+00:00",
      "Options": {
        "DnsSupport": "enable",
        "Ipv6Support": "disable"
      },
      "State": "available",
      "SubnetIds": [
        "subnet-0080bd39fe3626e89"
      ],
      "Tags": [
        {
          "Key": "Name",
          "Value": "fish"
        }
      ],
      "TransitGatewayAttachmentId": "tgw-attach-075ea06a59d3212af",
      "TransitGatewayId": "tgw-03201f1960ddb0c25",
      "VpcId": "vpc-0ecbcbd110fd839d1",
      "VpcOwnerId": "804819755326"
    }
  ]
}
